# mipt-atp-tp-seminars

./: .gitignore  Dockerfile  README.md  app.py  app.sh  docker-compose.yaml  nginx.conf  redis.sh  requirements.txt
.github/workflows/: docker-build.yml  docker-publish.yml  python-app.yml  release.yml
01-hello_world/: CMakeLists.txt
02-structured/: CMakeLists.txt  main.cpp
02-structured/include/: print.hpp
02-structured/src/: print.cpp
03-subproject/: CMakeLists.txt  main.cpp
03-subproject/src/: CMakeLists.txt
04-options/: CMakeLists.txt  main.cpp
04-options/include/: print.hpp
04-options/src/: CMakeLists.txt
05-autogen/: CMakeLists.txt  build.sh  clear.sh  generate.sh  main.cpp
05-autogen/src/: CMakeLists.txt
backend/: Dockerfile  app.py  requirements.txt
creational/01-builder/: CMakeLists.txt
creational/01-builder/struct/src/builder/: HamMushroomPizzaBuilder.cpp
creational/01-builder/struct/src/utils/: HamMushroomPizza.cpp
creational/02-abstract-factory/: CMakeLists.txt  main.cpp
creational/02-abstract-factory/struct/include/abstract_factory/: AbstractPizzaMaker.hpp  PizzaMakerRecco256.hpp
creational/02-abstract-factory/struct/src/abstract_factory/: PizzaMakerLoano512.cpp
creational/02-abstract-factory/struct/src/utils/: YaccChefPizza.cpp
creational/03-singleton/: CMakeLists.txt
creational/03-singleton/struct/include/abstract_factory/: PizzaMakerLoano512.hpp
creational/03-singleton/struct/include/singleton/: IngredientsLogger.hpp
creational/03-singleton/struct/include/utils/: Pizza.hpp  YaccChefPizza.hpp
creational/03-singleton/struct/src/builder/: AbstractBuilder.cpp
creational/03-singleton/struct/src/singleton/: IngredientsLogger.cpp
creational/03-singleton/struct/src/utils/: HamMushroomPizza.cpp  YaccChefPizza.cpp
docker/: app.py  tests.sh
nginx/: Dockerfile  nginx.conf
patterns/creational/: CMakeLists.txt
patterns/creational/builder/: CMakeLists.txt  main.cpp
patterns/creational/builder/include/: AbstractBuilder.hpp  HamMushroomPizza.hpp  HamMushroomPizzaBuilder.hpp  Pizza.hpp  YaccChefPizza.hpp  YaccChefPizzaBuilder.hpp
patterns/creational/builder/src/: HamMushroomPizza.cpp  HamMushroomPizzaBuilder.cpp  YaccChefPizza.cpp  YaccChefPizzaBuilder.cpp
patterns/creational/struct/include/builder/: AbstractBuilder.hpp
patterns/creational/struct/src/abstract_factory/: PizzaMakerRecco256.cpp
patterns/creational/struct/src/builder/: YaccChefPizzaBuilder.cpp
tests/: test1_sum.py  tests.py
tests/coverage/: branchy_sum.py  test.py  very_branchy_sum.py
tests/mock_testing/: main.py  mock.py  test.py
